--- a/FsxLogger.ViewModels.Portable/FsxLogger.ViewModels.Portable.csproj
+++ b/FsxLogger.ViewModels.Portable/FsxLogger.ViewModels.Portable.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FsxLogger.ViewModels.Messages\FsxLogger.ViewModels.Messages.csproj">
+      <Project>{d4fbb952-21b3-42ad-849e-0067f4cbd812}</Project>
+      <Name>FsxLogger.ViewModels.Messages</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
