--- a/FsxLogger.Client/FsxLogger.Client.csproj
+++ b/FsxLogger.Client/FsxLogger.Client.csproj
@@ -81,20 +81,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="LoginWindow.ammy.cs">
       <DependentUpon>LoginWindow.ammy</DependentUpon>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +120,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FsxLogger.ViewModels.Messages\FsxLogger.ViewModels.Messages.csproj">
+      <Project>{d4fbb952-21b3-42ad-849e-0067f4cbd812}</Project>
+      <Name>FsxLogger.ViewModels.Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FsxLogger.ViewModels.Portable\FsxLogger.ViewModels.Portable.csproj">
       <Project>{e3a0c8ac-e0a2-40a8-9b71-ed1bc4dbdf98}</Project>
       <Name>FsxLogger.ViewModels.Portable</Name>
