--- a/FsxLogger.ViewModels.Messages/FsxLogger.ViewModels.Messages.csproj
+++ b/FsxLogger.ViewModels.Messages/FsxLogger.ViewModels.Messages.csproj
@@ -40,6 +40,7 @@
     <Compile Include="BaseMessage.cs" />
     <Compile Include="CloseApplicationMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowDialogMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
