--- a/FsxLogger.Client/packages.config
+++ b/FsxLogger.Client/packages.config
@@ -3,4 +3,6 @@
   <package id="Ammy" version="1.1.35" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
+  <package id="WpfLocalizeExtension" version="2.3.2" targetFramework="net461" />
+  <package id="XAMLMarkupExtensions" version="1.2.1.3" targetFramework="net461" />
 </packages>
