--- a/FsxLogger.ViewModels.Wpf/FsxLogger.ViewModels.Wpf.csproj
+++ b/FsxLogger.ViewModels.Wpf/FsxLogger.ViewModels.Wpf.csproj
@@ -58,12 +58,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WPFLocalizeExtension, Version=2.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WpfLocalizeExtension.2.3.2\lib\net35\WPFLocalizeExtension.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="XAMLMarkupExtensions, Version=1.2.1.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XAMLMarkupExtensions.1.2.1.3\lib\net40\XAMLMarkupExtensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TranslationsManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FsxLogger.Translations\FsxLogger.Translations.csproj">
+      <Project>{4137d698-f2a8-4b6c-a592-2e5fabbaf689}</Project>
+      <Name>FsxLogger.Translations</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FsxLogger.ViewModels.Messages\FsxLogger.ViewModels.Messages.csproj">
       <Project>{d4fbb952-21b3-42ad-849e-0067f4cbd812}</Project>
       <Name>FsxLogger.ViewModels.Messages</Name>
